src/objects/employees__c.object
<CustomObject>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <picklist>
            <picklistValues>
                <fullName>sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <displayFormat>PWC-{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>eid</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>name_del__c</fullName>
        <label>name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_performance__c</fullName>
        <label>sales performance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>status</label>
        <type>Checkbox</type>
    </fields>
    <label>employees</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>name_del__c</columns>
        <columns>status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>pwc-{00000000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>